runit (1.2.3-1) unstable; urgency=low

  * new upstream version.
  * debian/copyright: 2005.
  * debian/control: Suggests: fgetty.
  * debian/getty-tty5.run: use fgetty if available.
  * debian/diff/runsv.8.diff: new; fix typo in man page.
  * debian/rules: target unpack: apply diff.

 -- Gerrit Pape <pape@smarden.org>  Sun,  8 May 2005 14:46:16 +0000

runit (1.0.5-3) unstable; urgency=low

  * debian/control, debian/rules: add Build-Depends: dietlibc-dev [ppc64];
    add ppc64 to DIET_ARCHS (thx Andreas Jochens, closes: #299302).

 -- Gerrit Pape <pape@smarden.org>  Fri, 25 Mar 2005 11:22:46 +0000

runit (1.0.5-2) unstable; urgency=low

  * debian/control: Build-Depends: dietlibc-dev (>> 0.28-0) to make diet
    compiled programs work with a kernel with stack protection (thx Csillag
    Tamas, closes: 299550).
  * debian/runit.README.Debian: minor.

 -- Gerrit Pape <pape@smarden.org>  Sun, 20 Mar 2005 19:49:38 +0000

runit (1.0.5-1) unstable; urgency=low

  * new upstream release.
  * debian/getty-tty5.run: don't use absolute pathname.
  * debian/control, debian/rules, runit.postinst, runit.postrm: minor
    cleanup.
  * debian/diff/svlogd.diff: remove; obsolete.
  * debian/rules: don't apply patch.

 -- Gerrit Pape <pape@smarden.org>  Tue, 21 Sep 2004 18:18:31 +0000

runit (1.0.4-2) unstable; urgency=medium

  * debian/diff/svlogd.diff: new; from upstream CVS: several minor fixes to
    svlogd.
  * debian/rules: apply patch in target unpack.

 -- Gerrit Pape <pape@smarden.org>  Mon, 13 Sep 2004 08:37:27 +0000

runit (1.0.4-1) unstable; urgency=low

  * new upstream release.
  * debian/control: Build-Depends: dietlibc-dev (>> 0.27-0).
  * debian/rules: minor cleanup.
  * debian/implicit: update to revision 1.10.
  * debian/runit.README.Debian: minor.
  * debian/runit.postinst, debian/runit.postrm, debian/runit.preinst:
    simplify; cleanup.

 -- Gerrit Pape <pape@smarden.org>  Sun,  1 Aug 2004 18:38:36 +0000

runit (1.0.3-1) unstable; urgency=low
